Итерация 2: Интеграция векторного поиска услуг
- Реализован модуль knowledge/search.py для векторного поиска по услугам с использованием ChromaDB и sentence-transformers.\n- Обновлены данные в services_knowledge_base.json, добавлен courseCode для интеграции с 1С.\n- Обработчики бота в handlers.py переведены с echo-режима на интеллектуальный поиск.\n- Проведено полное тестирование функционала в Docker-окружении.

--- a/doc/services_knowledge_base.json
+++ b/doc/services_knowledge_base.json
@@ -5,6 +5,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Основные курсы",
       "name": "Обучение полетам и пилотированию FPV-дронов",
+      "courseCode": "FPV_FLIGHT_BASIC",
       "details": {
         "Целевая аудитория": "Начинающие",
         "Длительность": "4 месяца",
@@ -18,6 +19,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Основные курсы",
       "name": "Сборка FPV-дрона",
+      "courseCode": "FPV_ASSEMBLY_BASIC",
       "details": {
         "Описание": "Обучение сборке и настройке гоночного квадрокоптера",
         "Целевая аудитория": "Новички и профессионалы",
@@ -30,6 +32,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Основные курсы",
       "name": "Подготовка к соревнованиям",
+      "courseCode": "FPV_COMPETITION_PREP",
       "details": {
         "Целевая аудитория": "Продвинутые пилоты",
         "Описание": "Оттачивание стратегии, освоение трасс, оптимизация дрона",
@@ -42,6 +45,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Основные курсы",
       "name": "Онлайн курсы",
+      "courseCode": "FPV_ONLINE_COURSE",
       "details": {
         "Описание": "Сборка и управление дроном в дистанционном формате",
         "Цена": "Не указана (требует уточнения у менеджера)"
@@ -53,6 +57,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Индивидуальные курсы для взрослых",
       "name": "Первый шаг в освоении карьеры",
+      "courseCode": "INDIVIDUAL_CAREER",
       "details": {
         "Описание": "Индивидуальные занятия для профессионального развития",
         "Цена": "от 10 000 ₽"
@@ -64,6 +69,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Индивидуальные курсы для взрослых",
       "name": "Новое хобби: сборка и управление дронами",
+      "courseCode": "INDIVIDUAL_HOBBY",
       "details": {
         "Описание": "Индивидуальные занятия для хобби",
         "Цена": "от 4 000 ₽"
@@ -75,6 +81,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Форматы и тарифы на занятия",
       "name": "Пробное занятие",
+      "courseCode": "TRIAL_LESSON",
       "details": {
         "Цена": "Бесплатно"
       },
@@ -85,6 +92,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Форматы и тарифы на занятия",
       "name": "Индивидуальное занятие",
+      "courseCode": "INDIVIDUAL_LESSON",
       "details": {
         "Длительность": "90 минут",
         "Цена": "4 000 ₽"
@@ -96,6 +104,7 @@
       "category": "Обучающие курсы и программы",
       "sub_category": "Форматы и тарифы на занятия",
       "name": "Абонемент",
+      "courseCode": "SUBSCRIPTION_MONTHLY",
       "details": {
         "Состав": "4 занятия в месяц",
         "Длительность каждого занятия": "90 минут",
@@ -108,6 +117,7 @@
       "category": "Корпоративные мероприятия и шоу дронов",
       "sub_category": "Пакеты мероприятий",
       "name": "Полное погружение",
+      "courseCode": "CORPORATE_IMMERSION",
       "details": {
         "Формат": "Оффлайн-мероприятие",
         "Описание": "Командные мероприятия на Racing и Freestyle дронах для развития навыков управления и командной работы."
@@ -119,6 +129,7 @@
       "category": "Корпоративные мероприятия и шоу дронов",
       "sub_category": "Пакеты мероприятий",
       "name": "Цифровые высоты",
+      "courseCode": "CORPORATE_DIGITAL",
       "details": {
         "Формат": "Онлайн-мероприятие",
         "Описание": "Онлайн-гонка в симуляторе для развития критического мышления."
@@ -130,6 +141,7 @@
       "category": "Корпоративные мероприятия и шоу дронов",
       "sub_category": "Пакеты мероприятий",
       "name": "Лучшее из двух миров",
+      "courseCode": "CORPORATE_HYBRID",
       "details": {
         "Формат": "Фиджитал (гибридный)",
         "Описание": "Укрепление связей между коллегами в инновационном формате."
@@ -141,6 +153,7 @@
       "category": "Дополнительные услуги",
       "sub_category": null,
       "name": "Аренда летней площадки 'Точка взлета'",
+      "courseCode": "RENTAL_TAKEOFF_POINT",
       "details": {
         "Описание": "Аренда открытой площадки на 'Ак Барс Арене' для полетов на дронах",
         "Цена": "1190 ₽",
@@ -153,6 +166,7 @@
       "category": "Дополнительные услуги",
       "sub_category": null,
       "name": "Спонсорство команды",
+      "courseCode": "SPONSORSHIP_TEAM",
       "details": {
         "Описание": "Предложение для компаний стать спонсором гоночной команды 'Академии дронов'",
         "Предлагаемые выгоды для спонсора": [
